--- a/package.json
+++ b/package.json
@@ -1,11 +1,9 @@
 {
-	"name": "terminal",
-	"displayName": "Terminal",
+	"name": "vscode-quick-terminal",
+	"displayName": "Quick Terminal",
 	"author": "Fooxly <hello@fooxly.com> (https://developers.fooxly.com/)",
-	"publisher": "Fooxly",
-	"icon": "assets/icon.png",
 	"description": "Open an external terminal by the press of a button",
-	"version": "0.0.3",
+	"version": "0.0.4",
 	"keywords": [
 		"fooxly",
 		"vscode",
@@ -30,12 +28,6 @@
 		"yarn": "^1",
 		"vscode": "^1.39.0"
 	},
-	"categories": [
-		"Other"
-	],
-	"activationEvents": [
-		"*"
-	],
 	"scripts": {
 		"vscode:prepublish": "yarn run compile",
 		"compile": "tsc -p ./",
@@ -49,5 +41,31 @@
 		"tslint": "^5.12.1",
 		"@types/node": "^10.12.21",
 		"@types/mocha": "^2.2.42"
+	},
+	"publisher": "Fooxly",
+	"icon": "assets/icon.png",
+	"galleryBanner": {
+		"color": "#FAFAFA",
+		"theme": "light"
+	},
+	"categories": [
+		"Other"
+	],
+	"activationEvents": [
+		"*"
+	],
+	"contributes": {
+		"configuration": {
+			"type": "object",
+			"title": "Quick Terminal",
+			"properties": {
+				"quickterminal.priority": {
+					"type": "integer",
+					"title": "Status bar button priority",
+					"description": "The priority given to the statusbar button",
+					"default": 0
+				}
+			}
+		}
 	}
 }
