fixed the name and license

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "vscode-quick-terminal",
+	"name": "quick-terminal",
 	"displayName": "Quick Terminal",
 	"author": "Fooxly <hello@fooxly.com> (https://developers.fooxly.com/)",
 	"description": "Open an external terminal by the press of a button",
