added uglify and updated assets

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,13 @@
 {
 	"compilerOptions": {
 		"module": "commonjs",
-		"target": "es6",
-		"outDir": "out",
-		"lib": [
-			"es6"
-		],
-		"sourceMap": true,
+		"target": "es5",
 		"rootDir": "src",
+		"outDir": "out",
+		"lib": ["es6"],
 		"strict": true,
+		"sourceMap": false,
+		"removeComments": true,
 		"noFallthroughCasesInSwitch": true
 	},
 	"exclude": [
