--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"displayName": "Quick Terminal",
 	"author": "Fooxly <hello@fooxly.com> (https://developers.fooxly.com/)",
 	"description": "Open an external terminal by the press of a button",
-	"version": "0.1.3",
+	"version": "0.1.4",
 	"keywords": [
 		"fooxly",
 		"vscode",
@@ -30,17 +30,20 @@
 	},
 	"scripts": {
 		"vscode:prepublish": "yarn run compile",
-		"compile": "tsc -p ./",
+		"compile": "tsc -p ./ && yarn minify",
+		"minify": "uglifyjs-folder -e -x .js -o out out",
 		"watch": "tsc -watch -p ./",
 		"postinstall": "node ./node_modules/vscode/bin/install",
 		"test": "yarn run compile && node ./node_modules/vscode/bin/test"
 	},
 	"devDependencies": {
-		"typescript": "^3.3.1",
-		"vscode": "^1.1.28",
-		"tslint": "^5.12.1",
+		"@types/mocha": "^2.2.42",
 		"@types/node": "^10.12.21",
-		"@types/mocha": "^2.2.42"
+		"tslint": "^5.12.1",
+		"typescript": "^3.3.1",
+		"uglify-js": "^3.6.8",
+		"uglifyjs-folder": "^1.5.1",
+		"vscode": "^1.1.28"
 	},
 	"publisher": "Fooxly",
 	"icon": "assets/icon.png",
