--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
 	"name": "quick-terminal",
 	"displayName": "Quick Terminal",
-	"author": "Fooxly <hello@fooxly.com> (https://developers.fooxly.com/)",
+	"author": "Fooxly <hello@fooxly.com> (https://developer.fooxly.com/)",
 	"description": "Open an external terminal by the press of a button",
-	"version": "1.0.1",
+	"version": "1.0.2",
 	"keywords": [
 		"fooxly",
 		"vscode",
@@ -25,25 +25,28 @@
 	"license": "MIT",
 	"main": "./out/extension.js",
 	"engines": {
-		"yarn": "^1",
-		"vscode": "^1.39.0"
+		"yarn": ">=1",
+		"node": ">=12",
+		"vscode": ">=1.39.0"
 	},
 	"scripts": {
-		"vscode:prepublish": "yarn run compile",
+		"package": "yarn run compile && vsce package --yarn -o extension.vsix",
 		"compile": "tsc -p ./ && yarn minify",
 		"minify": "uglifyjs-folder -e -x .js -o out out",
 		"watch": "tsc -watch -p ./",
 		"postinstall": "node ./node_modules/vscode/bin/install",
 		"test": "yarn run compile && node ./node_modules/vscode/bin/test"
 	},
+	"dependencies": {},
 	"devDependencies": {
-		"@types/mocha": "^2.2.42",
-		"@types/node": "^10.12.21",
-		"tslint": "^5.12.1",
-		"typescript": "^3.3.1",
-		"uglify-js": "^3.6.8",
-		"uglifyjs-folder": "^1.5.1",
-		"vscode": "^1.1.28"
+		"@types/mocha": "^8.2.2",
+		"@types/node": "^15.6.1",
+		"tslint": "^6.1.3",
+		"typescript": "^4.3.2",
+		"uglify-js": "^3.13.8",
+		"uglifyjs-folder": "^2.0.0",
+		"vsce": "^1.88.0",
+		"vscode": "^1.1.37"
 	},
 	"publisher": "Fooxly",
 	"icon": "assets/icon.png",
